2011-07-22  Ojan Vafai  <ojan@chromium.org>

        Fix issue loading gtests since there's no g_expectations.
        Also, make filing a bug file a webkit.org bug, not a crbug since
        the link is only shown for layout tests.
        * TestResultServer/static-dashboards/dashboard_base.js:
        * TestResultServer/static-dashboards/flakiness_dashboard.html:

2011-07-22  Ojan Vafai  <ojan@chromium.org>

        pull test expectations into the dashboard from wvn.webkit.org
        https://bugs.webkit.org/show_bug.cgi?id=65054

        Reviewed by Adam Barth.

        Now that svn.webkit.org supports cors headers, we can just grab the txt
        file from there instead of generating a JSON file that we upload
        to appengine. We'll stop generating the JSON file in a followup patch.

        * TestResultServer/static-dashboards/dashboard_base.js:
        * TestResultServer/static-dashboards/flakiness_dashboard.html:
        * TestResultServer/static-dashboards/flakiness_dashboard_tests.js:

2011-07-22  Adam Barth  <abarth@webkit.org>

        Fix typo so the tool works on a case-sensitive file system.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/garden-o-matic.html:

2011-07-22  Adam Barth  <abarth@webkit.org>

        garden-o-matic should know what patches are landing
        https://bugs.webkit.org/show_bug.cgi?id=64978

        Reviewed by Dimitri Glazkov.

        This patch adds a display of the recently committed patches to
        garden-o-matic.  The UI needs iteration, but this patch establishes the
        plumbing.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/Trac.js:
            - Teach trac how to extract more information from the commit log.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/config.js:
            - Add a data attribute for storing the revision.