@@ -249,12 +249,12 @@ function testAllTestsWithSamePlatformAndBuildType()
 
 function testFilterBugs()
 {
-    var filtered = filterBugs('SKIP BUG123 BUGCR123 BUGWK123 SLOW BUG_TONY')
-    assertEquals(filtered.modifiers, 'SKIP SLOW');
+    var filtered = filterBugs('SKIP BUG123 BUGCR123 BUGWK123 SLOW BUG_TONY DEBUG')
+    assertEquals(filtered.modifiers, 'SKIP SLOW DEBUG');
     assertEquals(filtered.bugs, 'BUG123 BUGCR123 BUGWK123 BUG_TONY');
 
-    filtered = filterBugs('SKIP SLOW')
-    assertEquals(filtered.modifiers, 'SKIP SLOW');
+    filtered = filterBugs('SKIP SLOW DEBUG')
+    assertEquals(filtered.modifiers, 'SKIP SLOW DEBUG');
     assertEquals(filtered.bugs, '');
 }
 
